--- a/vagas.html
+++ b/vagas.html
@@ -40,13 +40,13 @@
             <h2>Estágio em TI</h2>
             <p><strong>Empresa:</strong> Empresa X</p>
             <p>Aprendizado em suporte e desenvolvimento.</p>
-            <a href="detalhes.html" class="button">Ver detalhes</a>
+            <a href="detalhes.html?vaga=estagio" class="button">Ver detalhes</a>
         </div>
         <div class="vaga-card">
             <h2>Desenvolvedor Júnior</h2>
             <p><strong>Empresa:</strong> Empresa Y</p>
             <p>Vaga para recém-formados.</p>
-            <a href="detalhes.html" class="button">Ver detalhes</a>
+            <a href="detalhes.html?vaga=devjr" class="button">Ver detalhes</a>
         </div>
 
         <div class="fixed-bottom-bar">
